@@ -13,8 +13,9 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "dependsOnPkgs", "encoded_text_to_latex", "file_ext",
        "file_path_as_absolute", "file_path_sans_ext", "findHTMLlinks",
        "find_gs_cmd", "getBibstyle", "getDepList", "getVignetteInfo",
-       "installFoundDepends", "latexToUtf8", "list_files_with_exts",
+       "installFoundDepends", langElts, "latexToUtf8", "list_files_with_exts",
        "list_files_with_type", "loadRdMacros", "loadPkgRdMacros",
+       nonS3methods,
        "make_translations_pkg", "md5sum", "package.dependencies",
        "package_dependencies", "parseLatex", "parse_Rd", "pkgDepends",
        "pkgVignettes", "pskill", "psnice", "read.00Index", "readNEWS",
